--- a/package.json
+++ b/package.json
@@ -1,17 +1,47 @@
 {
-  "name": "ghrhome.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
+  "name": "ratest",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@craftjs/core": "^0.2.0-beta.8",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@mui/base": "^5.0.0-alpha.120",
+    "@mui/material": "^5.11.11",
+    "@mui/system": "^5.11.12",
+    "copy-to-clipboard": "^3.3.3",
+    "lzutf8": "^0.6.3",
+    "material-ui-color-picker": "^3.5.1",
+    "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "c2.js": "^1.0.5"
-  }
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {}
 }
