--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@mui/base": "^5.0.0-alpha.120",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.11",
     "@mui/system": "^5.11.12",
     "copy-to-clipboard": "^3.3.3",
+    "howler": "^2.2.3",
     "lzutf8": "^0.6.3",
     "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
