--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lzutf8": "^0.6.3",
     "material-ui-color-picker": "^3.5.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -45,5 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "styled-components": "^5.3.9"
+  }
 }
