--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
